# ha_yeelight_pro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  RELEASE_GUIDE.md  hacs.json  hacs_publish.py  manual_ha_test_checks.py  manual_ha_test_config_checks.py  manual_ha_test_core_checks.py  manual_ha_test_helpers.py  manual_ha_test_projector_checks.py  pyproject.toml  requirements_test.txt  test_actual_environment.py  test_complete_ha.py  test_functional.py  test_real_ha_environment.py  validate_hacs.py
docs/: AUTOMATION_EXAMPLES.md  CORE_MIGRATION_STRATEGY.md  FINAL_RELEASE_REPORT.md  FUNCTIONAL_TEST_GUIDE.md  GOAL_COMPLETION_AUDIT.md  INSTALL_TEST_PUBLISH_GUIDE.md  IOT_SPEC_REGISTRY.md  LOCAL_CONTROL.md  MIGRATION_FINAL_REPORT.md  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  PROJECT_SUMMARY.md  QUALITY_SCALE_GOLD_GAP_ANALYSIS.md  RELEASE_STATUS.md  SUPPORTED_DEVICES.md  TEST_REPORT.md  TROUBLESHOOTING.md  WORKS_WITH_HOME_ASSISTANT_APPLICATION_GUIDE.md  WORKS_WITH_HOME_ASSISTANT_HANDOVER.md  utils-migration-guide.md
scripts/: __init__.py  audit_private_house_coverage.py  check_release_zip.py  export_private_house_control_report.py  export_private_house_coverage_matrix.py  hacs_preflight.py  hacs_preflight_analytics_contracts.py  hacs_preflight_claims.py  hacs_preflight_contracts.py  hacs_preflight_core.py  hacs_preflight_data.py  hacs_preflight_diagnostics.py  hacs_preflight_diagnostics_data.py  hacs_preflight_entity_filter_data.py  hacs_preflight_entity_filters.py  hacs_preflight_iot_registry_data.py  hacs_preflight_iot_registry_projection_data.py  (+45 more)
(+656 files in other folders)
